Add a todo note

--- a/academic/icfp2010/todo.txt
+++ b/academic/icfp2010/todo.txt
@@ -1,3 +1,7 @@
+[STYLE]
+
+Add back \balance in the bibtex
+
 ---------------------------------------------------------------------
 -- CORE LANGUAGE
 
